<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 ArcTouch LLC.
  ~ All rights reserved.
  ~
  ~ This file, its contents, concepts, methods, behavior, and operation
  ~ (collectively the "Software") are protected by trade secret, patent,
  ~ and copyright laws. The use of the Software is governed by a license
  ~ agreement. Disclosure of the Software to third parties, in any form,
  ~ in whole or in part, is expressly prohibited except as authorized by
  ~ the license agreement.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
    android:defaultValue="@string/default_zipcode"
    android:dialogTitle="@string/settings_zip"
    android:key="@string/settings_zip_key"
    android:title="@string/settings_zip"/>

  <ListPreference
    android:defaultValue="@string/unit_celsius"
    android:dialogTitle="@string/settings_units"
    android:entries="@array/unit_entries"
    android:entryValues="@array/unit_values"
    android:key="@string/settings_units_key"
    android:title="@string/settings_units"/>

</PreferenceScreen>